<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView android:id="@+id/banner" android:layout_height="wrap_content"
		android:src="@drawable/banner"
		android:layout_width="wrap_content" android:padding="4dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"></ImageView>
	<TextView android:text="@string/welcome_text" android:id="@+id/welcome_text"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:padding="5dp" android:layout_below="@id/banner" />
	<Button android:text="@string/edit_preferences" android:id="@+id/edit_preferences"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@id/welcome_text"
		android:layout_marginTop="10dp"></Button>
	<Button android:layout_height="wrap_content" android:id="@+id/main_help_button"
		android:text="@string/help_button" android:layout_width="fill_parent"
		android:layout_below="@id/edit_preferences"></Button>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/vibration_twice_note"
		android:text="Please disable vibration in the settings of your text messaging app (Otherwise your phone will vibrate twice)"
		android:layout_alignParentBottom="true" android:textSize="12dp"
		android:gravity="center_horizontal" />
</RelativeLayout>